# mimalloc_rs

./: Cargo.toml
libmimalloc-sys/: Cargo.toml
libmimalloc-sys/src/: extended.rs
src/: arena.rs  extended.rs  lib.rs
