[package]
name = "mimalloc"
version = "0.2.0"
authors = [
    "Octavian Oncescu <octavonce@gmail.com>",
    "Vincent Rouillé <vincent@speedy37.fr>",
    "Thom Chiovoloni <chiovolonit@gmail.com>",
    "Matthew McDade <nvllmnd@pm.me>",
]
edition = "2024"
repository = "https://github.com/nvllmnd/mimalloc_rs.git"
keywords = ["mimalloc", "allocator", "encrypted-heap", "performance"]
categories = ["memory-management", "api-bindings"]
description = "Performance and security oriented drop-in allocator"
license = "GPL-3.0"
readme = "README.md"

[workspace]
members = [
    "libmimalloc-sys",
    "libmimalloc-sys/sys-test",
    "test-override-with-dylib",
]

[badges]
travis-ci = { repository = "nvllmnd/mimalloc_rs" }

[dependencies]
libmimalloc-sys = { path = "libmimalloc-sys", version = "0.1.44", default-features = false }

[features]
default = ["libmimalloc-sys/v3", "extended", "arena"]
arena = ["libmimalloc-sys/arena"]
secure = ["libmimalloc-sys/secure"]
override = ["libmimalloc-sys/override"]
debug = ["libmimalloc-sys/debug"]
debug_in_debug = ["libmimalloc-sys/debug_in_debug"]
local_dynamic_tls = ["libmimalloc-sys/local_dynamic_tls"]
no_thp = ["libmimalloc-sys/no_thp"]
extended = ["libmimalloc-sys/extended"]
v3 = ["libmimalloc-sys/v3"]
