[package]
name = "libmimalloc-sys"
version = "0.2.0"
authors = ["Octavian Oncescu <octavonce@gmail.com>", "Matthew McDade <nvllmnd@pm.me>"]
edition = "2024"
repository = "https://github.com/nvllmnd/mimalloc_rs/tree/master/libmimalloc-sys"
keywords = ["allocator", "encrypted-heap", "performance"]
categories = ["memory-management", "api-bindings"]
description = "Sys crate wrapping the mimalloc allocator"
license = "GPL-3.0"
links = "mi_malloc"
exclude = [
    "/c_src/mimalloc/v2/bin",
    "/c_src/mimalloc/v2/cmake",
    "/c_src/mimalloc/v2/doc",
    "/c_src/mimalloc/v2/docs",
    "/c_src/mimalloc/v2/ide",
    "/c_src/mimalloc/v2/test",
    "/c_src/mimalloc/v3/bin",
    "/c_src/mimalloc/v3/cmake",
    "/c_src/mimalloc/v3/doc",
    "/c_src/mimalloc/v3/docs",
    "/c_src/mimalloc/v3/ide",
    "/c_src/mimalloc/v3/test",
]

[dependencies]
cty = { version = "0.2", optional = true }
libc = "0.2"

[build-dependencies]
cc = "1.0"

[features]
secure = []
debug = []
debug_in_debug = []
override = []
extended = ["cty"]
arena = []
local_dynamic_tls = []
no_thp = []
v3 = []

# Show `extended` on docs.rs since it's the full API surface.
[package.metadata.docs.rs]
features = ["extended"]
